refactor: バリデーション戦略の統一および静的解析（SpotBugs）警告の解消